--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -10,8 +10,8 @@
 
     <script>
         function evaluationForYou(){
-            let userAge = document.getElementById("numAge").value
-            let userUsage = document.getElementById("avgTime").value
+            let userAge = myInfo[0]
+            let userUsage = myInfo[0]
 
             if (userAge >= 59){
                 userAge = "Baby Boomers"
