--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -6,12 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TESTING</h1>
+    <h1 id="GenAs">TESTING 1</h1>
+    <h1 id="UsageAs">TESTING 2</h1>
+    <h1 id="Recs">TESTING 3</h1>
+
 
     <script>
         function evaluationForYou(){
             let userAge = myInfo[0]
-            let userUsage = myInfo[0]
+            let userUsage = myInfo[1]
 
             if (userAge >= 59){
                 userAge = "Baby Boomers"
