Made some syntax changes, plus some stuff that doesn't work yet

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,7 +61,7 @@
 
                 <!-- Admin Dashboard: survey results, etc -->
                 <li class="nav-item">
-                    <a class="nav-link active" href="/admindashboard">Workers<span class="sr-only"></span></a>
+                    <a class="nav-link active" href="/adminDashboard">Workers<span class="sr-only"></span></a>
                 </li>
             </ul>
             <!-- Login -->
