--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="GenAs">TESTING 1</h1>
+    <h1 id="GenAs">TESTING 1 <%= myInfo[0] %> </h1>
     <h1 id="UsageAs">TESTING 2</h1>
     <h1 id="Recs">TESTING 3</h1>
 
