--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,107 +39,109 @@
         }
 
     </style>
-    <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
-    <nav class="navbar sticky-top navbar-expand-lg navbar" style="background-color: #2596be;" data-bs-theme="dark">
-        <a class="navbar-brand" href="/">
-            <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" width="65" height="35" alt="">
-        </a>
-        <a class="navbar-brand">Provo Community</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
+    
+        <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
+        <nav class="navbar sticky-top navbar-expand-lg navbar" style="background-color: #2596be;" data-bs-theme="dark">
+            <a class="navbar-brand" href="/">
+                <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" width="65" height="35" alt="">
+            </a>
+            <a class="navbar-brand">Provo Community</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto text-white">
-                <!-- Home button -->
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home <span class="sr-only"></span></a>
-                </li>
+            <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto text-white">
+                    <!-- Home button -->
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home <span class="sr-only"></span></a>
+                    </li>
 
-                <!-- Tableau Dashboard -->
-                <li class="nav-item">
-                    <a class="nav-link active" href="/dashboard">Why Mental Health?<span class="sr-only"></span></a>
-                </li>
+                    <!-- Tableau Dashboard -->
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/dashboard">Why Mental Health?<span class="sr-only"></span></a>
+                    </li>
 
-                <!-- Admin Dashboard: survey results, etc -->
-                <li class="nav-item">
-                    <a class="nav-link active" href="/adminDashboard">Workers<span class="sr-only"></span></a>
+                    <!-- Admin Dashboard: survey results, etc -->
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/adminDashboard">Workers<span class="sr-only"></span></a>
+                    </li>
+                </ul>
+                <!-- Login -->
+                <li class="nav-item mx-auto me-2">
+                <a class="nav-link" href="/login">Login</a>
                 </li>
-            </ul>
-            <!-- Login -->
-            <li class="nav-item mx-auto me-2">
-            <a class="nav-link" href="/login">Login</a>
-            </li>
-        </div>
-    </nav>
-    <br>
-    <!-- background image -->
-    <div class="row">
-        <div class="col-xs-12 covered">
-            <div class="covered-img"></div>
-            <h1 class="text-center fw-bold display-1">
-                Improving Mental Health Together
-            </h1>
-            <br>
-        <div class="card mx-auto" style="width: 25rem;">
-            <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-center">Help Us Help You</h5>
-                <p class="card-text text-center">Please take this 2-minute survey that explores the relationship between social media and mental health in Provo</p>
-                <div class="d-grid gap-2 col-6 mx-auto">
-                    <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Mental Health Survey</a>
-                </div>
             </div>
-        </div> 
+        </nav>
+        <div class="container">
+        <br>
+        <!-- background image -->
+        <div class="row">
+            <div class="col-xs-12 covered">
+                <div class="covered-img"></div>
+                <h1 class="text-center fw-bold display-1">
+                    Improving Mental Health Together
+                </h1>
+                <br>
+            <div class="card mx-auto" style="width: 25rem;">
+                <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" class="card-img-top" alt="surveyCard">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Help Us Help You</h5>
+                    <p class="card-text text-center">Please take this 2-minute survey that explores the relationship between social media and mental health in Provo</p>
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                        <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Mental Health Survey</a>
+                    </div>
+                </div>
+            </div> 
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="text-center fs-3 fw-bold">Worried? Stressed? Tired? <br> </h1>
+        <h2 class ="text-center fs-4 fw-bold">Find Events on Mental Health Near You</h2>
+        <br>
+        <br>
+        <br>
+        <!-- CAROUSEL SECTION-->
+    <div class="carousel-container h-25 d-inline-block mx-auto">
+        <div class="carousel-scale">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="Third slide">
+            </div>
+        </div>
+        </div>
+        <!-- back and forward arrows -->
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
         </div>
     </div>
     <br>
-    <br>
-    <br>
-    <br>
-    <h1 class="text-center fs-3 fw-bold">Worried? Stressed? Tired? <br> </h1>
-    <h2 class ="text-center fs-4 fw-bold">Find Events on Mental Health Near You</h2>
-    <br>
-    <br>
-    <br>
-    <!-- CAROUSEL SECTION-->
-  <div class="carousel-container h-25 d-inline-block mx-auto">
-    <div class="carousel-scale">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="First slide">
+        <div class="card">
+            <div class="card-body">
+            <blockquote class="blockquote mb-0 text-center">
+                <p>"Social media are responsible for aggravating mental health problems."</p>
+                <footer class="blockquote-footer"><cite title="Source Title">National Institute of Health</cite></footer>
+            </blockquote>
+            </div>
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="Third slide">
-        </div>
-      </div>
+        <br>
     </div>
-      <!-- back and forward arrows -->
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only"></span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only"></span>
-      </a>
-    </div>
-  </div>
-  <br>
-      <div class="card">
-        <div class="card-body">
-          <blockquote class="blockquote mb-0">
-            <p>"Social media are responsible for aggravating mental health problems."</p>
-            <footer class="blockquote-footer"><cite title="Source Title">National Institute of Health</cite></footer>
-          </blockquote>
-        </div>
-      </div>
-      <br>
-
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
