--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -8,20 +8,20 @@
 <body>
 
     <button onclick="evaluationForYou()">Click for Your Personal Evaluation</button>
-    
-    <% if (myInfo && myInfo[0]) { %>
-        <h1 id="GenAs"><%= myInfo[0].age %></h1>
-        <h1 id="UsageAs"></h1>
-        <h1 id="Recs"></h1>
-    <% } else { %>
-        <p>No information available</p>
-    <% } %>
+    <h1 id="GenAs"></h1>
+    <h1 id="UsageAs"></h1>
+    <h1 id="Recs"></h1>
+
 
     <script>
+        function checkData{
+            console.log(myInfo[0].age)
+            console.log(myInfo[0].use_sm)
+        }
+
         function evaluationForYou(){
-            if (myInfo && myInfo[0]) { 
-                let userAge = '<%= myInfo[0].age %>';
-                let userUsage = '<%= myInfo[0].use_sm %>';
+            let userAge = myInfo[0].age
+            let userUsage = myInfo[0].use_sm
 
             if (userAge >= 59){
                 userAge = "Baby Boomers"
