--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,6 @@
         }
 
     </style>
-    
         <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
         <nav class="navbar sticky-top navbar-expand-lg navbar" style="background-color: #2596be;" data-bs-theme="dark">
             <a class="navbar-brand" href="/">
@@ -54,7 +53,7 @@
                 <ul class="navbar-nav mr-auto text-white">
                     <!-- Home button -->
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home <span class="sr-only"></span></a>
+                    <a class="nav-link active" aria-current="page" href="/">Home<span class="sr-only"></span></a>
                     </li>
 
                     <!-- Tableau Dashboard -->
@@ -99,36 +98,26 @@
         <br>
         <br>
         <br>
-        <h1 class="text-center fs-3 fw-bold">Worried? Stressed? Tired? <br> </h1>
-        <h2 class ="text-center fs-4 fw-bold">Find Events on Mental Health Near You</h2>
+        <h1 class="text-center fw-bold display-1">Worried? Stressed? Tired? <br> </h1>
+        <h2 class ="text-center fs-4 fw-bold">Find Mental Health Events Near You !</h2>
         <br>
         <br>
         <br>
+    
         <!-- CAROUSEL SECTION-->
     <div class="carousel-container h-25 d-inline-block mx-auto">
         <div class="carousel-scale">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="First slide">
+            <img class="d-block w-100" src="/resources/44afc8_b3821d1f8dfc44c78ab589e5ee89fccf~mv2.webp" alt="First slide">
             </div>
             <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="Second slide">
+            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_641653599_868515626953_1_original.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" alt="Third slide">
+            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_647891039_1642573265253_1_original.jpg" alt="Third slide">
             </div>
-        </div>
-        </div>
-        <!-- back and forward arrows -->
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
         </div>
     </div>
     <br>
@@ -148,7 +137,6 @@
           <li class="nav-item"><a href="/survey" class="nav-link px-2 text-muted">Survey</a></li>
           <li class="nav-item"><a href="/dashboard" class="nav-link px-2 text-muted">Stats</a></li>
           <li class="nav-item"><a href="/login" class="nav-link px-2 text-muted">Login</a></li>
-          <li class="nav-item"><a href="/test" class="nav-link px-2 text-muted">Test</a></li>
         </ul>
         <p class="text-center text-muted">© 2023 SMU MH</p>
       </footer>
