--- a/views/home.ejs
+++ b/views/home.ejs
@@ -110,7 +110,7 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img class="d-block w-100" src="/resources/44afc8_b3821d1f8dfc44c78ab589e5ee89fccf~mv2.webp" alt="First slide">
+            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_647891039_1642573265253_1_original.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
             <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_641653599_868515626953_1_original.jpg" alt="Second slide">
