--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -34,9 +34,14 @@
                 <a class="nav-link active" aria-current="page" href="/">Home <span class="sr-only"></span></a>
                 </li>
 
+                <!-- Survey -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/survey">Survey<span class="sr-only"></span></a>
+                </li>
+
                 <!-- Tableau Dashboard -->
                 <li class="nav-item">
-                    <a class="nav-link active" href="/dashboard">Why Mental Health?<span class="sr-only"></span></a>
+                    <a class="nav-link active" href="/dashboard">Stats<span class="sr-only"></span></a>
                 </li>
 
                 <!-- Admin Dashboard: survey results, etc -->
