save button change

--- a/views/modifyAcc.ejs
+++ b/views/modifyAcc.ejs
@@ -77,7 +77,7 @@
                     <br>
                     <input type="checkbox" onclick="ShowPassword()">Show Password
                     <br><br>
-                    <button class="btn mx-auto btn btn-outline-secondary" type="submit">Edit</button>
+                    <button class="btn mx-auto btn btn-outline-secondary" type="submit">Save</button>
                 </form>
             </div>
         </div>
