create account button update

--- a/views/createAcc.ejs
+++ b/views/createAcc.ejs
@@ -77,7 +77,7 @@
                     <Input type="text" id="login_password" name="login_password"></Input>
                     <br>
                     <br>
-                    <Input type="submit" value="Log In"></Input>
+                    <Input class="btn mx-auto btn btn-outline-secondary" type="submit" value="Log In"></Input>
                 </form>
             </div>
         </div>
