--- a/views/entryDetails.ejs
+++ b/views/entryDetails.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entry #<%= myEntries[0].entry_id %></title>
 </head>
-<body>
+<body>  
     <div>
-        <p>Entry Number: <%= myEntries[0].entry_id %></p>
+        <h1 class="text-center fw-bold display-2">Entry Number: <%= myEntries[0].entry_id %></h1>
         <p>Timestamp: <%= myEntries[0].timestamp %></p>
         <p>1. Age: <%= myEntries[0].age %></p>
         <p>2. Gender: <%= myEntries[0].gender %></p>
