--- a/views/createAcc.ejs
+++ b/views/createAcc.ejs
@@ -57,24 +57,25 @@
                 <p id="warning_id"></p>
                 <form action="/createAcc" method="POST">
                     <label for="FirstName">First Name</label>
-                    <Input type="text" id="login_firstname" name="login_firstname"></Input>
+                    <input type="text" id="login_firstname" name="login_firstname">
                     <br>
                     <br>
                     <label for="LastName">Last Name</label>
-                    <Input type="text" id="login_lastname" name="login_lastname"></Input>
+                    <input type="text" id="login_lastname" name="login_lastname">
                     <br>
                     <br>
                     <label for="username">Username</label>
-                    <Input type="text" id="login_username" name="login_username"></Input>
+                    <input type="text" id="login_username" name="login_username">
                     <br>
                     <br>
                     <label for="password">Password</label>
-                    <Input type="text" id="login_password" name="login_password"></Input>
+                    <input type="text" id="login_password" name="login_password">
                     <br>
                     <br>
-                    <Input type="submit" value="Log In"></Input>
+                    <button type="submit">Log In</button>
                 </form>
             </div>
         </div>
+    </div>
 </body>
 </html>
