--- a/views/createAcc.ejs
+++ b/views/createAcc.ejs
@@ -78,7 +78,7 @@
                     <input type="text" id="login_password" name="login_password">
                     <br>
                     <br>
-                    <Input class="btn mx-auto btn btn-outline-secondary" type="submit" value="Log In"></Input>
+                    <button class="btn mx-auto btn btn-outline-secondary" type="submit">Log In</button>
                 </form>
             </div>
         </div>
