--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -23,11 +23,11 @@
         <br>
         <section>
             <div class="container">
-                <h1><%=myInfo[0].use_sm%></h1>
+                <!-- <h1><%=myInfo[0].avg_daily_sm_use%></h1> -->
                 <h1>You're from the following generation: </h1>
                 <h1 id="GenerationAssessment" class="hidden" value=<%=myInfo[0].age%>></h1>
                 <h1>Who uses social media for</h1>    
-                <h1 id="HourlyAssessment" class="hidden" value=<%=myInfo[0].use_sm%>></h1>
+                <h1 id="HourlyAssessment" class="hidden" value=<%=myInfo[0].avg_daily_sm_use%>></h1>
                 <br>
     
                 <h2>Your generation may suffer more from</h2>
