--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -3,20 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- keep for collapsing navbar-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="icon" href="/resources/Screenshot 2023-12-05 at 8.56.01 PM.png" type="image/x-icon">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <title>Landing Page</title>
+    
+    
 </head>
 <body>
+    <style>
+        .nav-item {
+        list-style: none;
+        }
+        
+        .covered {
+        position:relative; /* make a new "render context", so absolute positioning is relative to this parent container */
 
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/styles.css">
-        <script defer src="/scripts/scripts.js"></script>
-        <title>Document</title>
-    </head>
+        padding:30px; /* only needed for this demo */
+        }
+        .covered-img {
+        background:url('/resources/44afc8_b3821d1f8dfc44c78ab589e5ee89fccf~mv2.webp');
+        opacity: .50;
+
+        background-size:cover; /* cover will scale the image so that the smallest dimension = the widest dimension of the box */
+        background-position:center; /* vs the top-left that is default */
+        
+        position:absolute; /* take me out of the render context! let me define my own positioning */
+        top:0;bottom:0;left:0;right:0; /* this could also work with width:100%; height:100%;, but is simpler */
+        }
+
+    </style>
     <body>
+        <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
+        <nav class="navbar sticky-top navbar-expand-lg navbar" style="background-color: #2596be;" data-bs-theme="dark">
+            <a class="navbar-brand" href="/">
+                <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" width="65" height="35" alt="">
+            </a>
+            <a class="navbar-brand">Provo Community</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto text-white">
+                    <!-- Home button -->
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home<span class="sr-only"></span></a>
+                    </li>
+
+                    <!-- Survey -->
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/survey">Survey<span class="sr-only"></span></a>
+                    </li>
+
+                    <!-- Tableau Dashboard -->
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/dashboard">Stats<span class="sr-only"></span></a>
+                    </li>
+
+                    <!-- Admin Dashboard: survey results, etc -->
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/adminDashboard">Workers<span class="sr-only"></span></a>
+                    </li>
+                </ul>
+                <!-- Login -->
+                <li class="nav-item mx-auto me-2">
+                <a class="nav-link" href="/login">Login</a>
+                </li>
+            </div>
+        </nav>
         <br>
         <br>
         <br>
@@ -44,6 +105,10 @@
                 <h6 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h6>
             </div>
         </section>
+
+        <form id="getHelpButton" action="/helpGenZ" method="GET">
+            <button></button>
+        </form>
     </body>
     </html>
 
