submit button bootstrap

--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -433,8 +433,11 @@
                 </div>
             </div>
             <br>
-            <div class="d-grid gap-2 mx-auto">
-                <button type="submit">Submit</button>
+            <br>
+            <div class="jumbotron jumbotron-fluid jumbotron text-center">
+                <div class="d-grid gap-2 d-md-block justify-content-md-end">
+                    <button class="btn mx-auto btn btn-outline-secondary" type="submit">Submit</button>
+                </div>
             </div>
         </div>
         </section>
