--- a/views/createAcc.ejs
+++ b/views/createAcc.ejs
@@ -55,7 +55,7 @@
             </li>
         </div>
     </nav>
-    <div class="jumbotron jumbotron-fluid jumbotron text-center" style="background-image: linear-gradient(to bottom, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.6) 100%), url(/resources/laladancedesign_logo.png)">
+    <div class="jumbotron jumbotron-fluid jumbotron text-center">
         <div class="row mt-5 justify-content-center" style="opacity: 0.7;">
             <div class="contact-form section-sm p-5 cta bg-light">
                 <h1>Create an Account</h1>
