--- a/views/helpGenZ.ejs
+++ b/views/helpGenZ.ejs
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
-    <script defer src="/scripts/scripts.js"></script>
-    <title>Document</title>
+    <title>How to Help Gen Z</title>
 </head>
 <body>
     <br>
@@ -14,14 +12,14 @@
     <br>
     <section>
         <div class="container">
-            <h1>You're from:</h1>
-            <h1 class="hidden">Gen Z</h1>    
+            <h1>Gen Z and Social Media Use</h1>    
             <br>
 
-            <h2>Your generation may suffer more from</h2>
-            <h3 class="hidden">&bull; Depression</h2>
-            <h3 class="hidden">&bull; Worriedness</h2>
-            <h3 class="hidden">&bull; Distractions</h2>
+            <h2>This generation may suffer more from</h2>
+            <h3 class=>&bull; Depression</h2>
+                <h6>Over 80% of Gen Z responed with having a higher than average depression rate when using the following apps</h6>
+            <h3 class=>&bull; Worriedness</h2>
+            <h3 class=>&bull; Distractions</h2>
             <h2>when compared with other generation.</h2>
             <br>
             <br>
