--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="/resources/Screenshot 2023-12-05 at 8.56.01 PM.png" type="image/x-icon">
-    
-    <title>Tableau</title>
+
+    <title>Stats</title>
 </head>
 <body>
     <style>
@@ -35,9 +35,14 @@
                 <a class="nav-link active" aria-current="page" href="/">Home <span class="sr-only"></span></a>
                 </li>
 
+                <!-- Survey -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/survey">Survey<span class="sr-only"></span></a>
+                </li>
+
                 <!-- Tableau Dashboard -->
                 <li class="nav-item">
-                    <a class="nav-link active" href="/dashboard">Why Mental Health?<span class="sr-only"></span></a>
+                    <a class="nav-link active" href="/dashboard">Stats<span class="sr-only"></span></a>
                 </li>
 
                 <!-- Admin Dashboard: survey results, etc -->
@@ -52,5 +57,15 @@
         </div>
     </nav>
     <h1>Tableau</h1>
+    
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="/survey" class="nav-link px-2 text-muted">Survey</a></li>
+          <li class="nav-item"><a href="/dashboard" class="nav-link px-2 text-muted">Stats</a></li>
+          <li class="nav-item"><a href="/login" class="nav-link px-2 text-muted">Login</a></li>
+        </ul>
+        <p class="text-center text-muted">© 2023 SMU MH</p>
+      </footer>
 </body>
 </html>
