--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="/resources/Screenshot 2023-12-05 at 8.56.01 PM.png" type="image/x-icon">
 
-    <title>Document</title>
+    <title>Mental Health Survey</title>
 
 </head>
 <body>
@@ -436,7 +436,7 @@
             <br>
             <div class="jumbotron jumbotron-fluid jumbotron text-center">
                 <div class="d-grid gap-2 d-md-block justify-content-md-end">
-                    <button class="btn mx-auto btn btn-outline-secondary" type="submit">Submit</button>
+                    <button class="btn mx-auto btn btn-outline-success" type="submit">Submit</button>
                 </div>
             </div>
         </div>
