--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -96,13 +96,13 @@
                 <h2 class="hidden">&bull; Depression</h2>
                 <h2 class="hidden">&bull; Worriedness</h2>
                 <h2 class="hidden">&bull; Distractions</h2>
-                <h1>when compared with other generation.</h1>
+                <h1>when compared with other generations.</h1>
                 <br>
     
-                <h1>What can I do to reduce my suffering:</h1>
+                <h1>Find out more what you can do:</h1>
+                <!-- <h3 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
                 <h3 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
-                <h3 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
-                <h3 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3>
+                <h3 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h3> -->
             </div>
             <form id="getHelpButton" action="/helpGenZ">
                 <button>Find Out More</button>
@@ -133,7 +133,7 @@
             userAge = "Gen Z"
             document.getElementById("getHelpButton").action = ("/helpGenZ")
         }
-        
+
         let sGenerationalAssessment = userAge + ",<br>"
         document.getElementById("GenerationAssessment").innerHTML = sGenerationalAssessment
     </script>
