--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -93,9 +93,9 @@
                 <br>
     
                 <h1>Your generation may suffer more from</h1>
-                <h2 class="hidden">&bull; Depression</h2>
-                <h2 class="hidden">&bull; Worriedness</h2>
-                <h2 class="hidden">&bull; Distractions</h2>
+                <h2 id="stat1" class="hidden">&bull; Depression</h2>
+                <h2 id="stat1" class="hidden">&bull; Worriedness</h2>
+                <h2 id="stat1" class="hidden">&bull; Distractions</h2>
                 <h1>when compared with other generations.</h1>
                 <br>
     
@@ -110,6 +110,16 @@
         </section>
 
         <p id="ageTag" class="truehidden"><%=myInfo[0].age%></p>
+
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+              <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+              <li class="nav-item"><a href="/survey" class="nav-link px-2 text-muted">Survey</a></li>
+              <li class="nav-item"><a href="/dashboard" class="nav-link px-2 text-muted">Stats</a></li>
+              <li class="nav-item"><a href="/login" class="nav-link px-2 text-muted">Login</a></li>
+            </ul>
+            <p class="text-center text-muted">© 2023 SMU MH</p>
+          </footer>
     </body>
     </html>
 
@@ -120,18 +130,31 @@
         if (userAge >= 59){
             userAge = "Baby Boomers"
             document.getElementById("getHelpButton").action = ("/helpBoomers")
+            document.getElementById("stat1").innerHTML = "Apathy"
+            document.getElementById("stat2").innerHTML = "Sleep Issues"
+            document.getElementById("stat3").innerHTML = "Being Highly Distracted"
+
         }
         else if (userAge >= 43){
             userAge = "Gen X"
             document.getElementById("getHelpButton").action = ("/helpGenX")
+            document.getElementById("stat1").innerHTML = "Being Highly Distracted"
+            document.getElementById("stat2").innerHTML = "Worriedness"
+            document.getElementById("stat3").innerHTML = "Sleep Issues"
         }
         else if (userAge >= 27){
             userAge = "Millennials"
             document.getElementById("getHelpButton").action = ("/helpMillenials")
+            document.getElementById("stat1").innerHTML = "Worriedness"
+            document.getElementById("stat2").innerHTML = "Being Highly Distracted"
+            document.getElementById("stat3").innerHTML = "Difficulty Conscentrating"
         }
         else{
             userAge = "Gen Z"
             document.getElementById("getHelpButton").action = ("/helpGenZ")
+            document.getElementById("stat1").innerHTML = "Worriedness"
+            document.getElementById("stat2").innerHTML = "Depression"
+            document.getElementById("stat3").innerHTML = "Being Highly Distracted"
         }
 
         let sGenerationalAssessment = userAge + ",<br>"
