Made fields required

--- a/views/createAcc.ejs
+++ b/views/createAcc.ejs
@@ -63,19 +63,19 @@
                 <p id="warning_id"></p>
                 <form action="/createAcc" method="POST">
                     <label for="FirstName">First Name</label>
-                    <input type="text" id="login_firstname" name="login_firstname">
+                    <input type="text" id="login_firstname" name="login_firstname" required>
                     <br>
                     <br>
                     <label for="LastName">Last Name</label>
-                    <input type="text" id="login_lastname" name="login_lastname">
+                    <input type="text" id="login_lastname" name="login_lastname" required>
                     <br>
                     <br>
                     <label for="username">Username</label>
-                    <input type="text" id="login_username" name="login_username">
+                    <input type="text" id="login_username" name="login_username" required>
                     <br>
                     <br>
                     <label for="password">Password</label>
-                    <input type="text" id="login_password" name="login_password">
+                    <input type="text" id="login_password" name="login_password" required>
                     <br>
                     <br>
                     <button type="submit" class="btn mx-auto btn btn-outline-secondary">Create</button>
