--- a/views/modifyAcc.ejs
+++ b/views/modifyAcc.ejs
@@ -64,19 +64,20 @@
                 <br>
                 <form action="/modifyAcc" method="POST">
                     <label for="FirstName">First Name</label>
-                    <input type="text" id="login_firstname" name="login_firstname" value="<%= myUsers[0].first_name%>">
+                    <input type="text" id="login_firstname" name="login_firstname" value="<%= myUsers[0].first_name%>" required>
                     <br><br>
                     <label for="LastName">Last Name</label>
-                    <input type="text" id="login_lastname" name="login_lastname" value="<%= myUsers[0].last_name%>">
+                    <input type="text" id="login_lastname" name="login_lastname" value="<%= myUsers[0].last_name%>" required>
                     <br><br>
                     <label for="username">Username</label>
-                    <input type="text" id="login_username" name="login_username" value="<%= myUsers[0].username%>">
+                    <input type="text" id="login_username" name="login_username" value="<%= myUsers[0].username%>" required>
                     <br><br>
                     <label for="password">Password</label>
-                    <input type="password" id="login_password" name="login_password" value="<%= myUsers[0].password%>">
+                    <input type="password" id="login_password" name="login_password" value="<%= myUsers[0].password%>" required>
                     <br>
                     <br>
-                    <input type="checkbox" onclick="ShowPassword()">Show Password
+                    <input type="checkbox" id="show_pass" onclick="ShowPassword()">
+                    <label for="show_pass">Show Password</label>
                     <br><br>
                     <button class="btn mx-auto btn btn-outline-secondary" type="submit">Save</button>
                 </form>
